--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="root">
+        <h1>{{titolo}}</h1>
+        <img :src=img.immagine alt="">
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
